added media query

--- a/code/index.html
+++ b/code/index.html
@@ -16,7 +16,7 @@
       <!-- Some kind of logo and navbar -->
       <nav>
       <div class="logo-name"> 
-        <img class="logo" src="../images/logo-2.jpg" alt="Logo"> 
+        <img class="logo" src="./logo.svg" alt="Logo"> 
         <h1> ARCHitectureMAGazine</h1>
       </div>
 
@@ -43,8 +43,6 @@
       <img class="big-news-image" src="../images/zebbache.jpg" alt="Zebbache">
       <h2 class="big-news-text">This week a redesign of the Lloyd's building by Richard Rogers was announced!
         <br> This week on ARCHMAG, insurance company Lloyd's of London revealed it would overhaul the iconic Underwriting Room at the heart of its high-tech Lloyd's building in London designed by Richard Rogers. 
-        <!-- <br>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et accumsan quam, sed rutrum neque. Nulla ac orci consequat, consectetur quam et, sodales turpis. Aenean auctor interdum elit, non efficitur neque. Aenean pellentesque diam nec elit auctor, in sollicitudin ante porta. -->
         <a href="#">Read more >></a> 
         <br>
       <a href="#">Save the article<i style="font-size:24px" class="fa">&#xf0c7;</i> </a> 
@@ -60,35 +58,35 @@
       <!-- The other news  -->
       <div class="card">
         <img class="news-image" src="../images/adrien.jpg" alt="Adrien">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et accumsan quam, sed rutrum neque. Nulla ac orci consequat, consectetur quam et, sodales turpis. Aenean auctor interdum elit, non efficitur neque. Aenean pellentesque diam nec elit auctor, in sollicitudin ante porta.  <br> <a href="#">Read more >></a> </p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et accumsan quam, sed rutrum neque. Nulla ac orci consequat, consectetur quam et, sodales turpis. Aenean auctor interdum elit, non efficitur neque.   <br> <a href="#">Read more >></a> </p>
       </div>
       <div class="card">
         <img class="news-image" src="../images/chris.jpg" alt="Chris">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et accumsan quam, sed rutrum neque. Nulla ac orci consequat, consectetur quam et, sodales turpis. Aenean auctor interdum elit, non efficitur neque. Aenean pellentesque diam nec elit auctor, in sollicitudin ante porta. <br> <a href="#">Read more >></a>  </p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et accumsan quam, sed rutrum neque. Nulla ac orci consequat, consectetur quam et, sodales turpis. Aenean auctor interdum elit, non efficitur neque.  <br> <a href="#">Read more >></a>  </p>
       </div>
       <div class="card">
         <img class="news-image" src="../images/martin.jpg" alt="Martin">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et accumsan quam, sed rutrum neque. Nulla ac orci consequat, consectetur quam et, sodales turpis. Aenean auctor interdum elit, non efficitur neque. Aenean pellentesque diam nec elit auctor, in sollicitudin ante porta. <br><a href="#">Read more >></a>  </p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et accumsan quam, sed rutrum neque. Nulla ac orci consequat, consectetur quam et, sodales turpis. Aenean auctor interdum elit, non efficitur neque. <br><a href="#">Read more >></a>  </p>
       </div>
       <div class="card">
         <img class="news-image" src="../images/knubb.jpg" alt="knubb">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et accumsan quam, sed rutrum neque. Nulla ac orci consequat, consectetur quam et, sodales turpis. Aenean auctor interdum elit, non efficitur neque. Aenean pellentesque diam nec elit auctor, in sollicitudin ante porta. <br>  <a href="#">Read more >></a>  </p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et accumsan quam, sed rutrum neque. Nulla ac orci consequat, consectetur quam et, sodales turpis. Aenean auctor interdum elit, non efficitur neque.  <br>  <a href="#">Read more >></a>  </p>
       </div>
       <div class="card">
         <img class="news-image" src="../images/pawel.jpg" alt="Pawel">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et accumsan quam, sed rutrum neque. Nulla ac orci consequat, consectetur quam et, sodales turpis. Aenean auctor interdum elit, non efficitur neque. Aenean pellentesque diam nec elit auctor, in sollicitudin ante porta. <br> <a href="#">Read more >></a> </p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et accumsan quam, sed rutrum neque. Nulla ac orci consequat, consectetur quam et, sodales turpis. Aenean auctor interdum elit, non efficitur neque.  <br> <a href="#">Read more >></a> </p>
       </div>
       <div class="card">
         <img class="news-image" src="../images/pierre.jpg" alt="Pierre">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et accumsan quam, sed rutrum neque. Nulla ac orci consequat, consectetur quam et, sodales turpis. Aenean auctor interdum elit, non efficitur neque. Aenean pellentesque diam nec elit auctor, in sollicitudin ante porta. <br> <a href="#">Read more >></a>  </p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et accumsan quam, sed rutrum neque. Nulla ac orci consequat, consectetur quam et, sodales turpis. Aenean auctor interdum elit, non efficitur neque.  <br> <a href="#">Read more >></a>  </p>
       </div>
       <div class="card">
         <img class="news-image" src="../images/roman.jpg" alt="Roman">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et accumsan quam, sed rutrum neque. Nulla ac orci consequat, consectetur quam et, sodales turpis. Aenean auctor interdum elit, non efficitur neque. Aenean pellentesque diam nec elit auctor, in sollicitudin ante porta. <br> <a href="#">Read more >></a> </p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et accumsan quam, sed rutrum neque. Nulla ac orci consequat, consectetur quam et, sodales turpis. Aenean auctor interdum elit, non efficitur neque.  <br> <a href="#">Read more >></a> </p>
       </div>
       <div class="card">
         <img class="news-image" src="../images/patrick.jpg" alt="Patrick">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et accumsan quam, sed rutrum neque. Nulla ac orci consequat, consectetur quam et, sodales turpis. Aenean auctor interdum elit, non efficitur neque. Aenean pellentesque diam nec elit auctor, in sollicitudin ante porta. <br><a href="#">Read more >></a>  </p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et accumsan quam, sed rutrum neque. Nulla ac orci consequat, consectetur quam et, sodales turpis. Aenean auctor interdum elit, non efficitur neque.  <br><a href="#">Read more >></a>  </p>
       </div>
    
 
