--- a/code/index.html
+++ b/code/index.html
@@ -16,6 +16,7 @@
       <img class="logo-img" src="/images/logo-n.svg" alt="logo" />
       <h1>Tech News</h1>
     </div>
+
     <nav class="nav-bar">
       <a href="" alt="">Home</a>
       <a href="#latest" alt="">Latest</a>
@@ -39,10 +40,8 @@
     </div>
     <div class="big-text">
       <h1>Constant craving: how digital media turned us all into dopamine addicts</h1>
-
       <p>According to addiction expert Dr Anna Lembke, our smartphones are making us dopamine junkies, with each
-        swipe,
-        like and tweet feeding our habit. So how do we beat our digital dependency?
+        swipe, like and tweet feeding our habit. So how do we beat our digital dependency?
       </p>
       </a>
     </div>
@@ -184,12 +183,17 @@
         <p>Thanks to Carrington Malin - Marketing</p>
       </div>
     </div>
-
   </section>
 
 
   <footer>
-    <p>Stockholm, Sweden. 2021</p>
+    <a href="mailto: techNews@example.com" target="_blank" alt="email">
+      <p>Contact us</p>
+    </a>
+    <a href="#" target="_blank" alt="email">
+      <p>Subscribe now</p>
+    </a>
+    <p>Copyright @2021 | Designed by PAS | Stockholm, Sweden. 2021</p>
   </footer>
 </body>
 
