responsive and layout done

--- a/code/index.html
+++ b/code/index.html
@@ -17,7 +17,6 @@
       <div>
         <img class="logo" src="images/Vegan-Logo-3.png" alt="vegan-logo" />
       </div>
-
       <div class="navigation">
         <nav>
           <a class="nav-el" href="">TRENDING 🌱</a>
@@ -47,9 +46,11 @@
       <div class="big-news-text">
         <h1>7 INFLAMATION REDUCING <br />VEGAN FOOD GROUPS</h1>
         <p>
-          The dietary choices you make every day offer you a new chance at healing. <br>
-          Remember that a healthy body bursting with
-          energy showcases the absence of inflammation, so eat up these seven shining food groups to bring you back to
+          The dietary choices you make every day give you the possibility to become healthier.
+          <br />
+          <br />
+          Remember that a healthy body that has lots of energy showcases the absence of inflammation, so eat up these
+          seven nutrient-dense food groups to bring you back to
           brilliant!
         </p>
         <br />
