--- a/code/index.html
+++ b/code/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <header>
+      <h1>This project is going to be awesome</h1>
       <!-- Some kind of logo and navbar -->
     </header>
 
