--- a/code/index.html
+++ b/code/index.html
@@ -4,15 +4,50 @@
     <meta charset="utf-8" />
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
     <header>
-      <!-- Some kind of logo and navbar -->
+      <nav>
+        <ul>
+          <li>notion</li>
+          <li>stack<b>overflow</b></li>
+          <li>slack</li>
+        </ul>
+      </nav>
+
+      <div>
+        <img src="./logo.svg" class="logo" />
+      </div>
+
+      <div>
+        <h1>TECHNIGO'S NEWS</h1>
+      </div>
     </header>
 
     <section class="big-news">
       <!-- The big news content -->
+      <div class="cat-foto-wrapper">
+        <img src="./Cat-picture.jpg" />
+      </div>
+      
+      <div class="big-news-text">
+        <h2>WE ARE SENDING TO ALL OF YOU A CAT!</h2>
+        <p>
+          Recently studies have shown that cat owners do have better
+          psychological health than people without pets.<br>We
+          collected a few little-known scientific facts that prove how awesome
+          cats really are:
+        </p>
+        <p>
+          1. They can lower your risk of heart disease.<br />
+          2. Their purring helps to heal bones, tendons and muscles.<br />
+          3. You will sleep better.<br/>
+          4. They reduce stress and anxiety.<br>
+          5. You will feel happier, less nervous and more confident.
+        </p>
+        <p>Here at Technigo, we want the best for all our students so we have adopted cats from the shelters and soon you will be receiveing them, of course, they will be transported safety!</p>
+      </div>
     </section>
 
     <section class="">
