added a animation to the footer

--- a/code/index.html
+++ b/code/index.html
@@ -37,7 +37,7 @@
         Armstrong undgick döden med liten marginal när LLRV, en träningsmaskin som skulle simulera månlandaren, kraschade 6 maj 1968.
         Armstrong lämnade Nasa 1 augusti 1970. 1971-1979 undervisade Armstrong i teknik vid University of Cincinnati. Han tjänstgjorde 1986 i den kommission som undersökte Challengerolyckan.
         </p>
-        <aside class="big-text">"One small step for a man, one giant leap for mankind"</aside>
+        <aside class="big-quote-text">"One small step for a man, one giant leap for mankind"</aside>
        
       </div>
     </section>
@@ -52,8 +52,7 @@
           Millennium bug, Y2K bug, Y2K glitch or Y2K error, 
           refers to potential computer errors related to the 
           formatting and storage of calendar data for dates in 
-          
-          </p>
+        </p>
       </article>
       <article class="article">
         <img class="small-image" src="./img/club.jpg" alt="disco-balls">
@@ -62,7 +61,7 @@
           Millennium bug, Y2K bug, Y2K glitch or Y2K error, 
           refers to potential computer errors related to the 
           formatting and storage of calendar data for dates in
-          </p>
+        </p>
       </article>
       <article class="article">
         <img class="small-image" src="./img/computer.jpg" alt="guy at computer">
@@ -120,7 +119,7 @@
       </article>
     </section>
     <footer>
-      <p>Made by Helena Wiklund 2021</p>
+      <p class="footer-text">Made by Helena Wiklund 2021</p>
       <a class="ico" href="https://www.linkedin.com/feed/"><i class="fab fa-linkedin"></i></a>
       <a class="ico" href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
       <a class="ico" href="https://www.facebook.com/"><i class="fab fa-facebook-square"></i></a>
