--- a/code/index.html
+++ b/code/index.html
@@ -157,6 +157,7 @@
 			</section>
 		</main>
 		<footer>
+			<p>By Gustav Frid team 🐘</p>
 			<div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
 		</footer>
 	</body>
