--- a/code/index.html
+++ b/code/index.html
@@ -29,7 +29,7 @@
         </div>
         <div class="grid-1">
             <h2>How much exercise does your dog need daily to be happy?</h2>
-            <p>Hodor, hodor, hodor hodor. Hodor hodor HODOR! Hodor. HODOR? HODOR HODOR! Hodor! Hodor hodor. HODOR hodor, hodor. Hodor, hodor. Hodor. Hodor. Hodor hodor! Hodor? Hodor, hodor. Hodor. Hodor. Hodor hodor.Hodor hodor. Hodor hodor. HODOR hodor, hodor.
+            <p>Studies have always shown that exercise is critical to a dog's physical and mental health. But how much exercise is recommended? This article will help you understand and identify your dog's needs and the different exercises that can help you have the best life possible.
         </p>
         </div>   
       <!-- The big news content -->
