working on nav bar in tablet view: aligning items, taking away dead end classes

--- a/code/index.html
+++ b/code/index.html
@@ -17,16 +17,26 @@
 <body>
   <header>
     <nav class="nav-container navbar">
-      <div>
+      <ul class="navlinks-container list">
+        <div class="aligning-wrapper">
+          <li label="nav-links"><a href="#" class="nav-links" alt="tech">Tech</a></li>
+        </div>
+        <div class="aligning-wrapper">
+          <li label="nav-links"><a href="#" class="nav-links" alt="science">Science</a></li>
+        </div>
+      </ul>
+      <div class="aligning-wrapper">
         <a href="#"><img class="logo-desktop" src="logo-pics/clear.svg" alt="logo-desktop" /></a>
         <a href="#"><img class="logo-tablets-and-mobiles" src="logo-pics/vector/logo-original.svg"
             alt="logo-other" /></a>
       </div>
       <ul class="navlinks-container list">
-        <li label="nav-links"><a href="#" class="nav-links" alt="home">Home</a></li>
-        <li label="nav-links"><a href="#" class="nav-links" alt="tech">Tech</a></li>
-        <li label="nav-links"><a href="#" class="nav-links" alt="science">Science</a></li>
-        <li label="nav-links"><a href="#" class="nav-links" alt="more">More</a></li>
+        <div class="aligning-wrapper">
+          <li label="nav-links"><a href="#" class="nav-links" alt="home">Home</a></li>
+        </div>
+        <div class="aligning-wrapper">
+          <li label="nav-links"><a href="#" class="nav-links" alt="more">More</a></li>
+        </div>
       </ul>
       <div class="navicons-wrapper">
         <a href="#" alt="menu-icon">
@@ -143,11 +153,16 @@
 
   <footer>
     <nav class="nav-container navbar">
-      <a href="#" class="nav-links" alt="Contact us">Contact us</a>
-      <a href="#" class="nav-links" alt="Career page">Career page</a>
-      <a href="#" class="nav-links" alt="Privacy Policy">Our partners</a>
-      <a href="#" class="nav-links" alt="Cookies">More</a>
-      <p class="signature">Designed and developed by Mary Snopok</p>
+      <ul class="navlinks-container list">
+        <li label="nav-links"><a href="#" class="nav-links" alt="Contact us">Contact us</a></li>
+        <li label="nav-links"><a href="#" class="nav-links" alt="Contact us">Contact us</a></li>
+        <li label="nav-links"><a href="#" class="nav-links" alt="Career page">Career page</a></li>
+        <li label="nav-links"><a href="#" class="nav-links" alt="Privacy Policy">Our partners</a></li>
+        <li label="nav-links"><a href="#" class="nav-links" alt="Cookies">More</a></li>
+      </ul>
+      <div class="signature-container">
+        <p class="signature">Designed and developed by Mary Snopok</p>
+      </div>
     </nav>
   </footer>
 
