added responsiveness and styling for tablet-size

--- a/code/index.html
+++ b/code/index.html
@@ -16,18 +16,16 @@
         <img class="logo" src="./lakelogo_white.svg" alt="Fjord Logo" />
         <h1>A fjord with no name</h1>
       </div>
-      <nav>
-        <a href="#">Contact</a>
-        <a href="#">Blog</a>
-        <a href="#">Outdoor</a>
-        <a href="#">Contact</a>
-      </nav>
+      <a class="nav-link" id="about" href="#about-footer">About</a>
+      <a class="nav-link" id="blog" href="#blog-articles">Blog</a>
+      <a class="nav-link" href="#">Outdoor</a>
+      <a class="nav-link" href="#contact-section">Contact</a>
       <!-- Some kind of logo and navbar -->
     </header>
 
     <section class="big-news">
       <!-- The big news content -->
-      <article class="big-news-article">
+      <article class="big-news-article" id="blog-articles">
         <img class="big-news-image" src="./image/window_ brian-walker.jpg" alt="windowview of a northern lake" />
         <p class="big-news-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </article>
@@ -66,7 +64,7 @@
     </section>
 
     <section class="contact">
-      <div class="sm-icons">
+      <div class="sm-icons" id="contact-section">
         <a href="https://github.com/nehrwein" target="_blank"><i class="fab fa-github"></i></a>
         <a href="https://codepen.io/BumBumBurka" target="_blank"><i class="fab fa-codepen"></i></a>
         <a href="https://www.linkedin.com/in/birgit-nehrwein-9b4656194/" target="_blank"><i class="fab fa-linkedin"></i></a>
@@ -76,7 +74,7 @@
     </section>
 
     <footer>
-      <p class="footer-text">&copy 2021 BumBumBurka</p>
+      <p class="footer-text" id="about-footer">&copy 2021 BumBumBurka</p>
     </footer>
   </body>
 </html>
