New logo,added section headers

--- a/code/index.html
+++ b/code/index.html
@@ -13,9 +13,9 @@
     <header>
       <!-- Some kind of logo and navbar -->
       <div class="head-logo">
-        <img  src="./logo.svg" alt="site-logo" class="site-logo">
+        <img  src="./download.png" alt="site-logo" class="site-logo">
       </div>
-      <h1 class="header-text">The Daily Clubber</h1>
+      <h1 class="header-text">MUSIC UNDERGROUND</h1>
     </header>
       <nav> 
         <a class="nav-menu" href="#Events">Events</a>
@@ -34,6 +34,9 @@
       </article>
     </section>
 
+    <div class="events-header">
+      <h3 id="Events">Events</h3>
+    </div>     
     <section class="all-events">
       <!-- The other news  -->
       <div class="events">
@@ -54,8 +57,11 @@
       </div>
     </section>
 
+    <div class="music-header">
+      <h3 id="Music">Music</h3>
+    </div>    
     <section class="all-music">
-      <div class="music">
+            <div class="music">
         <img src="./smile-front-cover-scaled-cover.jpeg" alt="theo-parrish-cover" class="music-photo">
         <p>Strong words and even stronger music as Theo keeps it realer than anyone in the game.</p>
       </div>
@@ -74,8 +80,18 @@
     </section>
 
     <footer>
-      <p>&copy;Copyright 2021</p> 
-      <a href="#efthymios.karakasis@gmail.com">Email us</a>
+      <div class="social-media">
+        <a class="social-media-link" href="#Facebook">Facebook</a>
+        <a class="social-media-link" href="#Instagram">Instagram</a>
+        <a class="social-media-link" href="#Twitter">Twitter</a>
+      </div>
+      <!-- <div class="sign-up"> 
+        <form action="/action.page.php">
+          <input type="email" id="email" name="email"><br><br>
+          <input type="submit" value="Sign Up">
+        </form>
+      </div> -->
+
 
     </footer>
   </body>
