change position css to deploy

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
   <!-- Some kind of logo and navbar -->
   <header>
     <div class="logo">
-      <img class="logo-img" src="/images/logo-n.svg" alt="logo" />
+      <img class="logo-img" src="./images/logo-n.svg" alt="logo" />
       <h1>Tech News</h1>
     </div>
 
     <nav class="nav-bar">
       <a href="" alt="">Home</a>
       <a href="#latest" alt="">Latest</a>
-      <img class="logo-img" src="/images/logo-n.svg" alt="logo" />
+      <img class="logo-img" src="./images/logo-n.svg" alt="logo" />
       <a href="#video" alt="">Video</a>
       <a href="mailto: techNews@example.com" target="_blank" alt="email">Contact us</a>
     </nav>
@@ -36,7 +36,7 @@
     <div class="big-image">
       <a href="https://www.theguardian.com/global/2021/aug/22/how-digital-media-turned-us-all-into-dopamine-addicts-and-what-we-can-do-to-break-the-cycle"
         target="_blank">
-        <img src="/images/dopamine-addicts.jpeg" alt="dopamine addicts to tecnology">
+        <img src="./images/dopamine-addicts.jpeg" alt="dopamine addicts to tecnology">
     </div>
     <div class="big-text">
       <h1>Constant craving: how digital media turned us all into dopamine addicts</h1>
@@ -60,7 +60,7 @@
       <a href="https://gadgets.ndtv.com/audio/news/oneplus-buds-pro-price-in-india-rs-9990-release-sale-date-august-26-specifications-features-2516888"
         target="_blank">
         <div class="small-img-container">
-          <img class="small-img" src="/images/oneplus-buds.jpeg" alt="headphones">
+          <img class="small-img" src="./images/oneplus-buds.jpeg" alt="headphones">
         </div>
         <div class="small-text">
           <h2>Audio</h2>
@@ -73,7 +73,7 @@
     <div class="small-square">
       <a href="https://www.cnet.com/pictures/google-pixel-5a-with-5g-refines-the-budget-android-phone/" target="_blank">
         <div class="small-img-container">
-          <img class="small-img" src="/images/google-pixel-5.jpeg" alt="android phone">
+          <img class="small-img" src="./images/google-pixel-5.jpeg" alt="android phone">
         </div>
         <div class="small-text">
           <h2>Mobile</h2>
@@ -85,7 +85,7 @@
     <div class="small-square">
       <a href="https://www.bbc.com/news/business-58277359" target="_blank">
         <div class="small-img-container">
-          <img class="small-img" src="/images/hakers-japan.jpeg" alt="hakers in Japan">
+          <img class="small-img" src="./images/hakers-japan.jpeg" alt="hakers in Japan">
         </div>
         <div class="small-text">
           <h2>Businness</h2>
@@ -97,7 +97,7 @@
     <div class="small-square">
       <a href="https://www.bbc.com/news/business-57983174" target="_blank">
         <div class="small-img-container">
-          <img class="small-img" src="/images/jumbo-jet.jpeg" alt="jumbo jet">
+          <img class="small-img" src="./images/jumbo-jet.jpeg" alt="jumbo jet">
         </div>
         <div class="small-text">
           <h2>Environment</h2>
@@ -110,7 +110,7 @@
       <a href="https://www.thelocal.se/20210615/its-a-democratic-tool-the-site-that-helps-you-find-a-covid-vaccine-slot-in-sweden/
                 target=" _blank">
         <div class="small-img-container">
-          <img class="small-img" src="/images/covid.jpeg" alt="covid vaccinne">
+          <img class="small-img" src="./images/covid.jpeg" alt="covid vaccinne">
         </div>
         <div class="small-text">
           <h2>Covid</h2>
@@ -123,7 +123,7 @@
       <a href="https://www.newscientist.com/article/2287792-tesla-is-building-an-ai-humanoid-robot-called-optimus-says-elon-musk/"
         target="_blank">
         <div class="small-img-container">
-          <img class="small-img" src="/images/robot-humanoid.png" alt="robot humanoid">
+          <img class="small-img" src="./images/robot-humanoid.png" alt="robot humanoid">
         </div>
         <div class="small-text">
           <h2>Robot</h2>
@@ -136,7 +136,7 @@
       <a href="https://www.computerworld.com/article/3630408/facebook-promises-immersive-vr-meetings-with-horizon-workrooms.html"
         target="_blank">
         <div class="small-img-container">
-          <img class="small-img" src="/images/facebook-horizon-workrooms.jpeg" alt="horizontal workrooms">
+          <img class="small-img" src="./images/facebook-horizon-workrooms.jpeg" alt="horizontal workrooms">
         </div>
         <div class="small-text">
           <h2>Virtual Reality</h2>
