--- a/code/index.html
+++ b/code/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
 
@@ -289,11 +290,15 @@
     </main>
 
     <footer>
-      <a href="">The Fake News Site</a>
-      <div>About</div>
-      <div>Contact</div>
-      <div>Help</div>
-      <div>Contribute</div>
+      <div class="footer-wrap">
+        <a href="" class="footer-site-name-link">The Fake News Site</a>
+        <div class="footer-social-media-icon">
+          <i class="fab fa-facebook-square"></i>
+          <i class="fab fa-twitter-square"></i>
+          <i class="fab fa-instagram-square"></i>
+      </div>
     </footer>
+    <hr class="thick" />
+    <p class="project-credentials">Project news site by Lousanne Lundström ❤</p>
   </body>
 </html>
