finnished the last details

--- a/code/index.html
+++ b/code/index.html
@@ -120,9 +120,9 @@
     </section>
     <footer>
       <p class="footer-text">Made by Helena Wiklund 2021</p>
-      <a class="ico" href="https://www.linkedin.com/feed/"><i class="fab fa-linkedin"></i></a>
-      <a class="ico" href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
-      <a class="ico" href="https://www.facebook.com/"><i class="fab fa-facebook-square"></i></a>
+      <a class="icon" href="https://www.linkedin.com/feed/"><i class="fab fa-linkedin"></i></a>
+      <a class="icon" href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+      <a class="icon" href="https://www.facebook.com/"><i class="fab fa-facebook-square"></i></a>
     </footer>
   </body>
 </html>
