added styling for desktop version

--- a/code/index.html
+++ b/code/index.html
@@ -19,7 +19,7 @@
       <a class="nav-link" id="about" href="#about-footer">About</a>
       <a class="nav-link" id="blog" href="#blog-articles">Blog</a>
       <a class="nav-link" href="#">Outdoor</a>
-      <a class="nav-link" href="#contact-section">Contact</a>
+      <a class="nav-link" id="contact" href="#contact-section">Contact</a>
       <!-- Some kind of logo and navbar -->
     </header>
 
