--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     </div>
 
     <nav class="nav-bar">
-      <a href="" alt="">Home</a>
-      <a href="#latest" alt="">Latest</a>
+      <a href="#">Home</a>
+      <a href="#latest">Latest</a>
       <img class="logo-img" src="./images/logo-n.svg" alt="logo" />
-      <a href="#video" alt="">Video</a>
-      <a href="mailto: techNews@example.com" target="_blank" alt="email">Contact us</a>
+      <a href="#video">Video</a>
+      <a href="mailto:techNews@example.com" target="_blank">Contact us</a>
     </nav>
   </header>
 
@@ -37,12 +37,15 @@
       <a href="https://www.theguardian.com/global/2021/aug/22/how-digital-media-turned-us-all-into-dopamine-addicts-and-what-we-can-do-to-break-the-cycle"
         target="_blank">
         <img src="./images/dopamine-addicts.jpeg" alt="dopamine addicts to tecnology">
+      </a>
     </div>
     <div class="big-text">
-      <h1>Constant craving: how digital media turned us all into dopamine addicts</h1>
-      <p>According to addiction expert Dr Anna Lembke, our smartphones are making us dopamine junkies, with each
-        swipe, like and tweet feeding our habit. So how do we beat our digital dependency?
-      </p>
+      <a href="https://www.theguardian.com/global/2021/aug/22/how-digital-media-turned-us-all-into-dopamine-addicts-and-what-we-can-do-to-break-the-cycle"
+        target="_blank">
+        <h1>Constant craving: how digital media turned us all into dopamine addicts</h1>
+        <p>According to addiction expert Dr Anna Lembke, our smartphones are making us dopamine junkies, with each
+          swipe, like and tweet feeding our habit. So how do we beat our digital dependency?
+        </p>
       </a>
     </div>
 
