--- a/code/index.html
+++ b/code/index.html
@@ -25,7 +25,9 @@
       <nav class="navigator">
         <i class="far fa-sun"></i>
         <h1>Gotland News</h1>
-        <i class="fas fa-bars"></i>
+        <div class="bars">
+          <i class="fas fa-bars"></i>
+        </div>
         <p class="nav-text1">Contact</p>
         <p class="nav-text2">About</p>
       </nav>
@@ -36,7 +38,7 @@
           <img class="gotland-image" src="https://images.unsplash.com/photo-1617995693211-4e97100e261d?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8Z290bGFuZHxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="photo of Gotland">
           <div class="big-news-text">
             <h2>Wheather forecast</h2> 
-            <p class="small-text-big-news">Gotland is the sunniest place in Sweden. Get the latest wheather forecast here!</p>
+            <p class="small-text-big-news"> <a href="https://www.bbc.com/weather/2662689" target="_blank">Gotland is the sunniest place in Sweden. Get the latest wheather forecast here!</a></p>
         </div>  
     </section>
 
@@ -45,31 +47,31 @@
       <div class="news-card">
         <img src="https://images.unsplash.com/photo-1446825597988-2bb4dfd264ac?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8ZXhwbG9zaW9ufGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=400&q=60" alt="image of explosion">
         <h3>Explosion near central Visby</h3>
-          <p>Detonation just outside of Ringmuren, who could it be?</p>
-      <!--länk: https://www.svt.se/nyheter/lokalt/ost/explosion-utanfor-ringmuren-->
+          <p> <a href="https://www.svt.se/nyheter/lokalt/ost/explosion-utanfor-ringmuren" target="_blank">Explosion just outside of Ringmuren, who could it be?</a></p>
       </div>
       <div class="news-card">
         <img src="https://images.unsplash.com/photo-1525268323446-0505b6fe7778?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8YmFyfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=400&q=60" alt="bar image">
         <h3>Gotlanders are thirsty</h3>
-        <p>Recent study finds out that Gotlanders are second best in the country at drinking</p>
-      <!--länk: https://sverigesradio.se/artikel/gotlanningarna-dricker-nast-mest-alkohol-i-landet-->
+        <p> <a href="https://sverigesradio.se/artikel/gotlanningarna-dricker-nast-mest-alkohol-i-landet" target="_blank">Recent study finds out that Gotlanders are second best in the country at drinking</a></p>
       </div>
       <div class="news-card">
         <img src="https://images.unsplash.com/photo-1572525794647-7954953d27d4?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8dG91cmlzdHxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=400&q=60" alt="image of tourist">
         <h3>Most tourists ever</h3>
-        <p>This summer was the most touristy ever, more tourists than locals</p>
-      <!--https://www.svt.se/nyheter/lokalt/ost/turistrekord-pa-gotland-och-fler-besokare-vantas-->
+        <p> <a href="https://www.svt.se/nyheter/lokalt/ost/turistrekord-pa-gotland-och-fler-besokare-vantas" target="_blank">This summer was the most touristy ever, more tourists than locals</a></p>
       </div>
       <div class="news-card">
         <img src="https://images.unsplash.com/photo-1614089254151-676cc373b01e?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8aG9yb3Njb3BlfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=400&q=60" alt="image of planet">
         <h3>Horoscope</h3>
-        <p>What will your Gotland-day be like? Find out here!</p>
-      <!--http://www.horoskop.nu-->
+        <p> <a href="http://www.horoskop.nu" target="_blank">What will your Gotland-day be like? Find out here!</a></p>
       </div>
     </section>
 
     <footer>
-      <a href="#top">Back to the top</a>
+      <p class="foot-text1">Contact</p>
+      <button type="button">
+        <a href="#top" class="button-text">Back to the top</a>
+      </button>
+      <p class="foot-text2">About</p>
     </footer>
 
   </body>
