--- a/code/index.html
+++ b/code/index.html
@@ -13,7 +13,7 @@
     <header>
       <!-- Some kind of logo and navbar -->
       <div class="head-logo">
-        <img  src="./download.png" alt="site-logo" class="site-logo">
+        <img src="./download.png" alt="site-logo" class="site-logo">
       </div>
       <h1 class="header-text">MUSIC UNDERGROUND</h1>
     </header>
@@ -39,19 +39,19 @@
     </div>     
     <section class="all-events">
       <!-- The other news  -->
-      <div class="events">
+      <div class="events e1">
         <img src="./se-0825-1458644-front.jpeg" alt="antony-linell" class="events-photo">
         <p>Peder Mannerfelt, Antony Linell & Ali M. Demirel present an evening of blistering audiovisual electronics in the beautiful setting of Capitol's prime movie theatre </p>
       </div>
-      <div class="events">
+      <div class="events e2">
         <img src="./de-0827-1458473-1779846-front.jpeg" alt="staub-festival" class="events-photo">
         <p>Line-up will be announced soon</p>
       </div>
-      <div class="events">
+      <div class="events e3">
         <img src="./df2021_bannerfb_def.jpeg" alt="draaimolen-festival" class="events-photo">
         <p>Draaimolen 2021 is going to be a special one. </p>
       </div>
-      <div class="events">
+      <div class="events e4">
         <img src="./se-0828-1460090-front.jpeg" alt="tradgarden-party" class="events-photo">
         <p>Daytime Sessions#66</p>
       </div>
@@ -61,19 +61,19 @@
       <h3 id="Music">Music</h3>
     </div>    
     <section class="all-music">
-            <div class="music">
+            <div class="music m1">
         <img src="./smile-front-cover-scaled-cover.jpeg" alt="theo-parrish-cover" class="music-photo">
         <p>Strong words and even stronger music as Theo keeps it realer than anyone in the game.</p>
       </div>
-      <div class="music">
+      <div class="music m2">
         <img src="./a0810955077_10-cover.jpeg" alt="alien-3-mix" class="music-photo"> 
         <p>An excellent techno remix that finds Daniel Avery in rare form.</p>
       </div>
-      <div class="music">
+      <div class="music m3">
         <img src="./andy-stott-never-cover.jpeg" alt="andy-stott-cover" class="music-photo">
         <p>A noir-pop milestone for the Manchester artist.</p>
       </div>
-      <div class="music">
+      <div class="music m4">
         <img src="./XNewYork_PcQWOEQ.png" alt="giegling-logo" class="music-photo">
         <p>Giegling releasing new album</p>
       </div>
