news boxes alignment and styling for tablet version

--- a/code/index.html
+++ b/code/index.html
@@ -18,25 +18,15 @@
   <header>
     <nav class="nav-container navbar">
       <ul class="navlinks-container list">
-        <div class="aligning-wrapper">
-          <li label="nav-links"><a href="#" class="nav-links" alt="tech">Tech</a></li>
-        </div>
-        <div class="aligning-wrapper">
-          <li label="nav-links"><a href="#" class="nav-links" alt="science">Science</a></li>
-        </div>
+        <li class="aligning" label="nav-links"><a href="#" class="nav-links" alt="tech">Tech</a></li>
+        <li class="aligning" label="nav-links"><a href="#" class="nav-links" alt="science">Science</a></li>
       </ul>
-      <div class="aligning-wrapper">
-        <a href="#"><img class="logo-desktop" src="logo-pics/clear.svg" alt="logo-desktop" /></a>
-        <a href="#"><img class="logo-tablets-and-mobiles" src="logo-pics/vector/logo-original.svg"
-            alt="logo-other" /></a>
-      </div>
+      <a href="#"><img class="logo-desktop aligning" src="logo-pics/clear.svg" alt="logo-desktop" /></a>
+      <a href="#"><img class="logo-tablets-and-mobiles aligning" src="logo-pics/vector/logo-original.svg"
+          alt="logo-other" /></a>
       <ul class="navlinks-container list">
-        <div class="aligning-wrapper">
-          <li label="nav-links"><a href="#" class="nav-links" alt="home">Home</a></li>
-        </div>
-        <div class="aligning-wrapper">
-          <li label="nav-links"><a href="#" class="nav-links" alt="more">More</a></li>
-        </div>
+        <li class="aligning" label="nav-links"><a href="#" class="nav-links" alt="home">Home</a></li>
+        <li class="aligning" label="nav-links"><a href="#" class="nav-links" alt="more">More</a></li>
       </ul>
       <div class="navicons-wrapper">
         <a href="#" alt="menu-icon">
@@ -48,8 +38,8 @@
   </header>
 
   <main>
-    <section>
-      <div class="banner-container">
+    <article class="banner-container">
+      <div class="sizing-wrapper">
         <a href="https://www.dummies.com/careers/project-management/use-agile-principles-teamwork-project/"
           target="blank" alt="article from dummies.com"><img class="main-banner"
             src="logo-pics/marvin-meyer-SYTO3xs06fU-unsplash.jpg" alt="agile team" /></a>
@@ -81,6 +71,8 @@
               </svg></a>
           </li>
         </ul>
+      </div>
+      <div class="sizing-wrapper">
         <p class="article-text">
           Teamwork is critical to agile projects. Creating good products requires cooperation among all the members of
           the project team, including customers
@@ -91,64 +83,64 @@
             target="blank" alt="read more">Read more...</a>
         </p>
       </div>
-    </section>
+    </article>
 
     <hr />
 
-    <section>
-      <div class="news-container news-box">
+    <section class="news-parent-container">
+      <div class="news-container news-box-styles">
         <a href="https://developer.apple.com/design/tips/" target="blank"><img class="news-pics"
             src="logo-pics/lum3n--RBuQ2PK_L8-unsplash.jpg" alt="desk picture" />
           <p class="article-text content-spacing">UI design Dos and Don'ts : DevTips from Apple.</p>
         </a>
       </div>
-      <div class="news-container news-box">
+      <div class="news-container news-box-styles">
         <a href="https://medium.com/diesdas-direct/how-i-became-a-frontend-developer-48a074a6bc72" target="blank"><img
             class="news-pics" src="logo-pics/ian-schneider-TamMbr4okv4-unsplash.jpg" alt="inspiring picture" />
           <p class="article-text content-spacing">How I became a Frontend Developer! Leslie B.</p>
         </a>
       </div>
-      <div class="news-container news-box">
+      <div class="news-container news-box-styles">
         <a href="https://medium.com/quick-code/coolest-25-web-design-trends-in-2021-thatll-rock-the-world-388eb1144b7e"
           target="blank"><img class="news-pics" src="logo-pics/kevin-o-connor-JxSLigoB-6A-unsplash.jpg"
             alt="colorful underground picture" />
           <p class="article-text content-spacing">Coolest 25+ Web Design Trends In 2021!</p>
         </a>
       </div>
-      <div class="news-container news-box">
+      <div class="news-container news-box-styles">
         <a href="https://dev.to/charissayj/pair-and-mob-programming-best-practices-ef9" target="blank"><img
             class="news-pics" src="logo-pics/john-schnobrich-2FPjlAyMQTA-unsplash.jpg" alt="team picture" />
           <p class="article-text content-spacing">Pair and Mob Programming: Best Practices.</p>
         </a>
       </div>
-      <div class="news-container news-box">
+      <div class="news-container news-box-styles">
         <a href="https://news.mit.edu/topic/machine-learning" target="blank"><img class="news-pics"
             src="logo-pics/carl-heyerdahl-KE0nC8-58MQ-unsplash.jpg" alt="do more picture" />
           <p class="article-text content-spacing">Latest news on Machine Learning from MIT!</p>
         </a>
       </div>
-      <div class="news-container news-box">
+      <div class="news-container news-box-styles">
         <a href="https://www.upgrad.com/blog/data-science-vs-data-analytics/" target="blank"><img class="news-pics"
             src="logo-pics/adeolu-eletu-unRkg2jH1j0-unsplash.jpg" alt="man picture" />
           <p class="article-text content-spacing">Data Science Vs Data Analytics.</p>
         </a>
       </div>
-      <div class="news-container news-box">
+      <div class="news-container news-box-styles">
         <a href="https://www.ft.com/content/41f8dad9-2a17-4789-8203-f6f5683d447b" target="blank"><img class="news-pics"
             src="logo-pics/frankie-lg35FkimT30-unsplash.jpg" alt="desk picture" />
           <p class="article-text content-spacing">Developers rethink the office after corona19.</p>
         </a>
       </div>
-      <div class="news-container news-box">
+      <div class="news-container news-box-styles">
         <a href="https://womenintechsummit.net/" target="blank"><img class="news-pics"
             src="logo-pics/vonecia-carswell-0aMMMUjiiEQ-unsplash.jpg" alt="woman picture" />
           <p class="article-text content-spacing">Don't miss Woman in Tech Summit: Fall 2021!</p>
         </a>
       </div>
-      <div class="button-container">
-        <button class="subscribe">SUBSCRIBE</button>
-      </div>
     </section>
+    <div class="button-container">
+      <button class="subscribe">SUBSCRIBE</button>
+    </div>
   </main>
 
   <footer>
