--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,79 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+<head>
+  <meta charset="utf-8" />
+  <title>Project 2: The News Site</title>
+  <link rel="stylesheet" href="./style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+</head>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
-  </body>
+<body>
+  <header>
+    <nav>
+      <img class="logo" src="./icons256.png" alt="logo">
+      <h1 class="site-name">NEWS TODAY</h1>
+      <div class="navigation" id="navigation-bar">
+        <ul>
+          <li><a href="default.asp">Log In</a></li>
+          <li><a href="subscribe.asp">Subscribe</a></li>
+          <li><a href="contact.asp">Contact</a></li>
+        </ul>
+    </nav>
+  </header>
+  <hr>
+  <div class="container grid">
+    <div class="cell1"><img src="taliban.jpg" alt="taliban"></div>
+    <div class="cell2"><img src="taliban.jpg" alt="taliban"></div>
+
+  </div>
+  <hr>
+  <section class="flex-parent">
+    <div class="flex-child-blue">
+      <img src="rainfall.jpg" alt="Germany">
+      <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in
+        some form, by injected humour, or randomised words which don't look even slightly believable.
+      </p>
+      <button>read more</button>
+    </div>
+    <div class="flex-child green">
+      <img src="croatia.jpg" alt="croatia">
+      <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in
+        some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+      <button>Read more</button>
+    </div>
+    <div class="flex-child yellow">
+      <img src="sea.jpeg" alt="sea">
+      <p>Just how much Barcelona owns to Gaudi...</p>
+      <button>read more</button>
+    </div>
+    <div class="flex-child yellow">
+      <img src="seaburn.jpeg" alt="seaburn">
+      <p>Just how much Barcelona owns to Gaudi...</p>
+      <button>read more</button>
+    </div>
+    <div class="flex-child yellow">
+      <img src="corona.png" alt="corona">
+      <p>Just how much Barcelona owns to Gaudi...</p>
+      <button>read more</button>
+    </div>
+    <div class="flex-child yellow">
+      <img src="sas.jpg" alt="sas">
+      <p>Just how much Barcelona owns to Gaudi...</p>
+      <button>read more</button>
+    </div>
+    <div class="flex-child yellow">
+      <img src="sas.jpg" alt="sas">
+      <p>Just how much Barcelona owns to Gaudi...</p>
+      <button>read more</button>
+    </div>
+    <div class="flex-child yellow">
+      <img src="sas.jpg" alt="sas">
+      <p>Just how much Barcelona owns to Gaudi...</p>
+      <button>read more</button>
+    </div>
+  </section>
+</body>
+
 </html>
