changed index.html with h2

--- a/code/index.html
+++ b/code/index.html
@@ -14,6 +14,7 @@
     <nav>
       <img class="logo" src="./icons256.png" alt="logo">
       <h1 class="site-name">NEWS TODAY</h1>
+      <h2>small news</h2>
       <div class="navigation" id="navigation-bar">
         <ul>
           <li><a href="default.asp">Log In</a></li>
